Changed layout to bottom tab menu

--- a/HomeCrew/HomeCrew.entitlements
+++ b/HomeCrew/HomeCrew.entitlements
@@ -9,7 +9,9 @@
 		<string>Default</string>
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array/>
+	<array>
+		<string>iCloud.com.eisenvault.HomeCrew</string>
+	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudKit</string>
